# booksearcher-crawler

./: Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml
core/router/: crawler_router.py
core/service/: crawler_service.py  webdriver_creator.py  webdriver_manager.py  webdriver_util.py
nginx/: Dockerfile  nginx.conf
util/: html_manager.py  proxy_manager.py
util/log/: custom_logger.py
