[tool.poetry]
name = "core"
version = "0.1.0"
description = "booksearcher"
authors = ["jihunz <thespringsong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
loguru = "^0.7.2"
selenium = "^4.21.0"
pydantic-settings = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
